cmake_minimum_required(VERSION 3.17)
project(algorithms)

set(CMAKE_CXX_STANDARD 14)

add_executable(Roblox_word_compression stack/Roblox_word_compression.cpp)
add_executable(Roblox_paint_the_ceiling dp/Roblox_paint_the_ceiling.cpp)
add_executable(Roblox_university_career_fair greedy/Roblox_university_career_fair.cpp)
add_executable(Roblox_prison_break hash/Roblox_prison_break.cpp)
add_executable(Roblox_maximum_occurring_character hash/Roblox_maximum_occurring_character.cpp)